; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_passthru.c_write_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_passthru.c_write_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcisel = type { i32 }
%struct.pci_io = type { i64, i32, i32, %struct.pcisel }

@pcifd = common dso_local global i32 0, align 4
@PCIOCWRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pcisel*, i64, i32, i32)* @write_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_config(%struct.pcisel* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.pcisel*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.pci_io, align 8
  store %struct.pcisel* %0, %struct.pcisel** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = call i32 @bzero(%struct.pci_io* %9, i32 24)
  %11 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %9, i32 0, i32 3
  %12 = load %struct.pcisel*, %struct.pcisel** %5, align 8
  %13 = bitcast %struct.pcisel* %11 to i8*
  %14 = bitcast %struct.pcisel* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %13, i8* align 4 %14, i64 4, i1 false)
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %9, i32 0, i32 0
  store i64 %15, i64* %16, align 8
  %17 = load i32, i32* %7, align 4
  %18 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %9, i32 0, i32 1
  store i32 %17, i32* %18, align 8
  %19 = load i32, i32* %8, align 4
  %20 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %9, i32 0, i32 2
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @pcifd, align 4
  %22 = load i32, i32* @PCIOCWRITE, align 4
  %23 = call i32 @ioctl(i32 %21, i32 %22, %struct.pci_io* %9)
  ret void
}

declare dso_local i32 @bzero(%struct.pci_io*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @ioctl(i32, i32, %struct.pci_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
